
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct sockaddr {int dummy; } ;
struct TYPE_3__ {int s_addr; } ;
struct TYPE_4__ {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct skinny_client {int sd; int active; TYPE_2__ saddr; int rhost; } ;


 int AF_INET ;
 int SKINNY_TCP_PORT ;
 int SOCK_STREAM ;
 int connect (int,struct sockaddr*,int) ;
 int htons (int ) ;
 int inet_addr (int ) ;
 int printf (char*) ;
 int socket (int ,int ,int ) ;

int skinny_client_connect(struct skinny_client *sc)
{
 int ret;
 sc->sd = socket(AF_INET,SOCK_STREAM,0);
 if (sc->sd == -1) {
  return -1;
 }
 sc->saddr.sin_family = AF_INET;
 sc->saddr.sin_port = htons(SKINNY_TCP_PORT);
 sc->saddr.sin_addr.s_addr = inet_addr(sc->rhost);
 ret = connect(sc->sd, (struct sockaddr *)&sc->saddr,sizeof(struct sockaddr));
 if (ret != 0) {
  printf("+++ UNABLE TO CONNECT TO REMOTE HOST 2000/TCP!\n");
  return -1;
 }
 printf("+++ CONNECTION OK\n");
 sc->active = 1;
 return 0;
}
